--- a/frontend/src/Admin.css
+++ b/frontend/src/Admin.css
@@ -279,8 +279,9 @@ body::-webkit-scrollbar-thumb {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  height: 70px;
+  height: 70px !important;
   padding: 0 30px;
+  /* margin-top: 40px; */
   background-color: #131720;
   width: 100%;
   position: relative;
@@ -2609,4 +2610,44 @@ body::-webkit-scrollbar-thumb {
   background: #2f80ed !important;
   height: 4px !important;
   border-radius: 4px !important;
+}
+
+
+
+
+
+
+
+
+
+
+.spinner-sv {
+  display: grid;
+  place-items: center;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0.5;
+  background: conic-gradient(
+    from 180deg at 50% 50%,
+    rgba(82, 0, 255, 0) 0deg,
+    #5200ff 360deg
+  );
+  animation: spin 2s infinite linear;
+}
+.spinner-sv::before {
+  content: "";
+  border-radius: 50%;
+  width: 80%;
+  height: 80%;
+  background-color: #000;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(1turn);
+  }
 }
