--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -103,9 +103,7 @@ body::-webkit-scrollbar-thumb {
   background-color: #2f80ed;
   outline: 1px solid #151f30;
 }
-.hero_section{
-  height: 100vh;
-}
+
 @media (min-width: 1440px) {
   .container {
     max-width: 1330px;
@@ -5128,14 +5126,14 @@ body::-webkit-scrollbar-thumb {
 .modal {
   position: relative;
   display: block;
-  background-color: #131720;
+  /* background-color: #131720; */
   margin: 40px auto;
   width: 100%;
   max-width: 440px;
   padding: 20px 20px 5px;
   border-radius: 16px;
   overflow: hidden;
-  border: 1px solid rgba(47,128,237,0.1);
+  /* border: 1px solid rgba(47,128,237,0.1); */
 }
 .modal .mfp-close {
   display: none;
@@ -5462,6 +5460,70 @@ body::-webkit-scrollbar-thumb {
 .plyr--video .plyr__control svg {
   filter: none;
 }
-
-
+.modal{
+  display: none !important;
+}
+.sidebar__logo {
+  margin-top: 40px;
+}
 /* <admin> */
+
+.main__table-text{
+  background-color:#151f30 !important ;
+}
+.main__table td{
+  background-color:#151f30 !important ;
+
+}
+.main__table tbody tr{
+  border-bottom: 10px solid #131720 !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.spinner-sv {
+  display: grid;
+  place-items: center;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0.5;
+  background: conic-gradient(
+    from 180deg at 50% 50%,
+    rgba(82, 0, 255, 0) 0deg,
+    #5200ff 360deg
+  );
+  animation: spin 2s infinite linear;
+}
+.spinner-sv::before {
+  content: "";
+  border-radius: 50%;
+  width: 80%;
+  height: 80%;
+  background-color: #000;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(1turn);
+  }
+}
